<resources>
    <string name="app_name">ZanshinJudoClub</string>
    <string name="to">To</string>
    <string name="welcome">Welcome</string>
    <string name="zanshinjudoclub">Zanshin Judo Club</string>
    <string name="tap_to_continue">Tap screen to continue...</string>
    <string name="first_session">First Session</string>
    <string name="become_member">Become a Member</string>
    <string name="members">Members</string>
    <string name="mat_fees">Mat Fees</string>
    <string name="future_events">Future Events</string>
    <string name="shop">Shop</string>
    <string name="congratulations">congratulations</string>
    <string name="your_first_session_is">your first session is</string>
    <string name="free">free</string>
    <string name="fill_forms">Please fill in the following forms to claim your free session</string>
    <string name="how_old">How old are you?</string>
    <string name="under_18">Under 18</string>
    <string name="over_18">Over 18</string>
    <string name="new_player">New player details and consent</string>
    <string name="new_player_details">New Player Details</string>
    <string name="full_name">Full name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="parent_guardian_details">Parent/Guardian Details</string>
    <string name="relation">Relation</string>
    <string name="email_address">Email</string>
    <string name="phone_number">Phone</string>
    <string name="postcode">Postcode</string>
    <string name="emergency_details">Emergency Contact Details</string>
    <string name="hint_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="dob_hint">dd/mm/yyyy</string>
    <string name="relation_hint">Relation</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="postcode_hint">Postcode</string>
    <string name="next_page">Next</string>
    <string name="other_known_conditions">Details of any known special dietary requirements / allergies / medical conditions?</string>
    <string name="helpful_information">Any other special needs, requirements or directions that would be helpful for the coaches to know?</string>
    <string name="enter_here">Enter here...</string>
    <string name="agree_to_update_kids">I will inform the coaches of any important changes to my child\'s health, medication or needs and also of any changes to the address or phone numbers given.</string>
    <string name="consent_to_photography_kids">I consent to Zanshin Judo Club photographing or videoing my child and that I have read, or been made aware of how the club will use these images or videos.</string>
    <string name="authorize_to_act_kids">I hereby authorise representatives of the club to act on my behalf, with regards to my/our child, in the event of an emergency and to sign on my/our behalf any consent form as required by medical or legal agencies in my/our absence.</string>
    <string name="todays_date">Date</string>
    <string name="todays_date_hint">dd mmm yyyy</string>
    <string name="all_set">you are all set for your first session</string>
    <string name="enjoy">enjoy</string>
    <string name="more_info_or_kit">For more information or to pick up a kit for the session please ask at reception</string>
    <string name="or">or</string>
    <string name="learn_more">to learn more about judo click on the video below</string>
    <string name="home_page">Home</string>
    <string name="agree_to_update_adult">I will inform the coaches of any important changes to my health, medication or needs and also of any changes to the address or phone numbers given.</string>
    <string name="consent_to_photography_adult">I consent to Zanshin Judo Club photographing or videoing me and that I have read, or been made aware of how the club will use these images or videos.</string>
    <string name="authorize_to_act_adult">I hereby authorise representatives of the club to act on my behalf in the event of an emergency and to sign any consent form as required by medical or legal agencies.</string>
    <string name="why_become_member">Why become a member?</string>
    <string name="member_paragraph">Here at zanshin judo club we like to think of ourselves as more of a community or even large family rather than just a sports club. We aim to create a fun safe environment where our players can reach their full potential and offer opportunities that lead into unforgettable experiences.</string>
    <string name="membership_year_fee">Membership fee is £40 for the year</string>
    <string name="reason1">Free club t-shirt</string>
    <string name="reason2">Discounted sessions</string>
    <string name="reason3">Player profile</string>
    <string name="reason4">Goal setting/tracking</string>
    <string name="reason5">Awards/Prizes</string>
    <string name="reason6">Events (comps, camps, gradings)</string>
    <string name="reason7">Club social events (awards night, celebrations, days out)</string>
    <string name="reason8">Join one of the club teams</string>
    <string name="reason9">Free embroided black belt when achieved</string>
    <string name="ten_reasons_why">10 reasons why</string>
    <string name="number1">1.</string>
    <string name="number2">2.</string>
    <string name="number3">3.</string>
    <string name="number4">4.</string>
    <string name="number5">5.</string>
    <string name="number6">6.</string>
    <string name="number7">7.</string>
    <string name="number8">8.</string>
    <string name="number9">9.</string>
    <string name="number10">10.</string>
    <string name="add_photo">add photo</string>
    <string name="choose_avatar">choose avatar</string>
    <string name="take_picture">take new picture</string>
    <string name="select_tagged">select tagged picture</string>
    <string name="almost_there">Your almost there!</string>
    <string name="continue_membership_fee">continue to payment to complete membership</string>
    <string name="pay_per_session">pay per session - £5</string>
    <string name="sessions_a_week1">1 session a week</string>
    <string name="cost_per_month1">£16 per month</string>
    <string name="sessions_a_week2">2 sessions a week</string>
    <string name="sessions_a_week3">3 sessions a week</string>
    <string name="sessions_a_week4">4 sessions a week</string>
    <string name="cost_per_month2">£32 per month</string>
    <string name="cost_per_month3">£48 per month</string>
    <string name="cost_per_month4">£60 per month</string>
    <string name="find_your_name">find your name</string>
    <string name="username">Username</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="check_details">Check details are correct</string>
    <string name="select_avatar">Choose your avatar</string>
</resources>
