<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191919"
    tools:context=".PayMatFees">

    <Button
        android:id="@+id/firstSession2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="#66DAA520"
        android:fontFamily="@font/walter_turncoat"
        android:padding="8dp"
        android:text="@string/sessions_a_week1"
        android:textColor="#191919"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/members2"
        app:layout_constraintEnd_toStartOf="@+id/becomeMember2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/becomeMember2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="#66DAA520"
        android:fontFamily="@font/walter_turncoat"
        android:padding="8dp"
        android:text="@string/sessions_a_week2"
        android:textColor="#191919"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/payFees2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstSession2" />

    <Button
        android:id="@+id/members2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="175dp"
        android:background="#66DAA520"
        android:fontFamily="@font/walter_turncoat"
        android:padding="8dp"
        android:text="@string/sessions_a_week3"
        android:textColor="#191919"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/payFees2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/payFees2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="175dp"
        android:background="#66DAA520"
        android:fontFamily="@font/walter_turncoat"
        android:padding="8dp"
        android:text="@string/sessions_a_week4"
        android:textColor="#191919"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/members2" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/walter_turncoat"
        android:text="@string/cost_per_month1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/firstSession2"
        app:layout_constraintEnd_toEndOf="@+id/firstSession2"
        app:layout_constraintStart_toStartOf="@+id/firstSession2"
        app:layout_constraintTop_toTopOf="@+id/firstSession2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button19"
        android:layout_width="358dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="#66DAA520"
        android:fontFamily="@font/walter_turncoat"
        android:text="@string/pay_per_session"
        android:textColor="#191919"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/becomeMember2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/walter_turncoat"
        android:text="@string/cost_per_month2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/becomeMember2"
        app:layout_constraintEnd_toEndOf="@+id/becomeMember2"
        app:layout_constraintStart_toStartOf="@+id/becomeMember2"
        app:layout_constraintTop_toTopOf="@+id/becomeMember2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/walter_turncoat"
        android:text="@string/cost_per_month3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/members2"
        app:layout_constraintEnd_toEndOf="@+id/members2"
        app:layout_constraintStart_toStartOf="@+id/members2"
        app:layout_constraintTop_toTopOf="@+id/members2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/walter_turncoat"
        android:text="@string/cost_per_month4"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/payFees2"
        app:layout_constraintEnd_toEndOf="@+id/payFees2"
        app:layout_constraintStart_toStartOf="@+id/payFees2"
        app:layout_constraintTop_toTopOf="@+id/payFees2"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>